# python-test

./: BatteryLife.py  If_divisible_by_2_5.py  MarkovSnakeLadders.py  MuliLinear Regression.py  PolynomialRegression.py  PredictShare  Test1.py  Test2.py  Vector.py  anova_between.csv  create_sample_data.py  kruskal_test.csv  launch.json  pyproject.toml  requirements.txt  spearman_satisfaction.csv  statistics_tests.py  wilcoxon_test_results_20250311_202245.txt
data/: create_sample_data.py  friedman_test.csv  mannwhitney_test.csv  pearson_running_study.csv  regression_study_scores.csv  ttest_independent.csv  ttest_paired.csv  wilcoxon_test.csv
results/: anova_between_results_20250311_212554.txt  friedman_test_results_20250311_212554.txt  kruskal_test_results_20250311_212554.txt  mannwhitney_test_results_20250311_203953.txt  mannwhitney_test_results_20250311_212554.txt  pearson_running_study_results_20250311_212554.txt  regression_study_scores_results_20250311_201304.txt  regression_study_scores_results_20250311_212554.txt  ttest_independent_results_20250311_212554.txt  ttest_paired_results_20250311_203355.txt  ttest_paired_results_20250311_212554.txt  wilcoxon_test_results_20250311_212554.txt
stochasstic/: AptitudeTest_Correlation.py  If_divisible_by_2_5.py  MarkovSnakeLadders.py  Subset.py  SubsetSelection.py
