[tool.poetry]
name = "statistical-tests"
version = "0.1.0"
description = "Statistical test suite for various analyses"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
numpy = "^1.24.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
langchain = "^0.0.267"
transformers = "^4.31.0"
torch = "^2.0.0"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"