[tool.poetry]
name = "statistical-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
numpy = "^1.26.4"
scipy = "^1.15.2"
statsmodels = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"